...
    <string name="list_hobby_groups">Hobby Groups</string>


    <string name="activity_edit_profile_name">HobbIT - Edit Profile</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1723407201283005</string>

    <string name="hobby_1">House and garden</string>
    <string name="hobby_2">Fashion</string>
    <string name="hobby_3">Literature</string>
    <string name="hobby_4">Games</string>
    <string name="hobby_5">Sports</string>
    <string name="hobby_6">Crafting</string>
    <string name="hobby_7">Computer and consoles</string>
    <string name="hobby_8">Music and instruments</string>
    <string name="hobby_9">Dancing</string>
    <string name="hobby_10">Art</string>
    <string name="hobby_11">Astronomy and universe </string>
...



    <string-array name="locations_array">
        <item>Graz</item>
        <item>Wien</item>
        <item>Salzburg</item>
        <item>Innsbruck</item>
    </string-array>

    <string name="action_edit_profile">Edit Profile</string>
    <string name="search_hint">Edit Profile</string>

...
